# DGraph

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
DGraph/: Communicator.py  CommunicatorBase.py  __init__.py  __version__.py  checks.py  utils.py
DGraph/data/: datasets.py  graph.py  ogbn_datasets.py  preprocess.py
DGraph/distributed/: Engine.py  RankLocalOps.py  __init__.py  commInfo.py  haloExchange.py
DGraph/distributed/csrc/: local_data_kernels.cuh  nvshmem_comm_kernels.cuh  torch_local_bindings.cpp  torch_local_kernels.cu  torch_nvshmem_p2p.cu  torch_nvshmem_p2p_bindings.cpp
DGraph/distributed/include/: macros.hpp  torch_local.hpp  torch_nvshmem_p2p.hpp
DGraph/distributed/mpi/: MPIBackendEngine.py  __init__.py
DGraph/distributed/nccl/: NCCLBackendEngine.py  _NCCLCommPlan.py  __init__.py  _indices_utils.py  _nccl_cache.py  _torch_func_impl.py  alltoallv_impl.py  gather_op_impl.py  scatter_op_impl.py
DGraph/distributed/nvshmem/: NVSHMEMBackendEngine.py  __init__.py  _nvshmem_cache.py
DGraph/utils/: TimingReport.py  __init__.py  data_splitting.py
cmake/: FindNVSHMEM.cmake
distributed/: utils.py
docs/: index.md  reference.md
experiments/Benchmarks/: README.md  TestNCCL.py  TestNVSHMEM.py  generate_plots.py  graph_utils.py
experiments/GraphCast/: README.md  dataset.py  dist_utils.py  graphcast_config.py  layers.py  microbenchmark_graphcast.py  model.py  preprocess.py  train_graphcast.py
experiments/GraphCast/data_utils/: graphcast_graph.py  icosahedral_mesh.py  preprocess.py  spatial_utils.py  utils.py
experiments/GraphCast/tests/: conftest.py  test_graph_data.py  test_single_graph_data.py  test_single_model.py
experiments/IGB/: GCN.py  GenerateCache.py  IGB260MDataset.py  main.py  utils.py
experiments/NVSHMEM-Enabled-DGRAPH/: NVSHMEM_init.py  PreInstallCheck.py  README.md
experiments/OGB/: GCN.py  GenerateCache.py  Readme.md  main.py  nccl_ogb_dataset.py  ogb_comm_dataset.py  plot_timing_reports.py  preprocess.py  utils.py
experiments/OGB-LSC/: README.md  RGAT.py  Trainer.py  config.py  main.py  setup_dataset_comms.py
experiments/OGB-LSC/lsc_datasets/: MAG240M_dataset.py  __init__.py  distributed_graph_dataset.py  synthetic_dataset.py
experiments/OGB-LSC/mag240m/: DGraph_MAG240M.py
experiments/OGB-LSC/synthetic/: synthetic_dataset.py
experiments/Synthetic-Billion/: README.md  preprocess.py
experiments/Synthetic-Billion/Generator/: Generator.cpp
tests/: README.md  test_NCCLCommPlan.py  test_comm_info.py  test_imports.py  test_local_kernels.py  test_mpi_backend.py  test_nccl_backend.py  test_nccl_gather.py  test_nvshmem_backend.py
